--- a/src/app/pages/current/current.component.html
+++ b/src/app/pages/current/current.component.html
@@ -13,7 +13,7 @@
 
 
 
-              <div class="border border-red-500 p-2 h-full">
+              <!--div class="border border-red-500 p-2 h-full">
                 <div class="flex space-x-2">
                   <input type="text" #input [value]="newTask()" (input)="newTask.set(input.value)">
                   <button type="button" class="border p-3" (click)="addTask()"Add Task></button>
@@ -24,7 +24,7 @@
                 <button class="border -3" (click)="changeFirstTask()">Change firs task</button>
                 <ng-container *ngIf="check()"></ng-container>
                 condicion {{iscondicion()}}
-              </div>
+              </div-->
 
 
 
@@ -50,6 +50,7 @@
                     </td>
                     <td class="px-4 py-3 text-sm">
                         {{item.last_name}}
+                        <ng-container *ngIf="check()"></ng-container>
                     </td>
                     <td class="px-4 py-3">
                       <div class="flex items-center text-sm">
