--- a/src/app/pages/clasic/clasic.component.html
+++ b/src/app/pages/clasic/clasic.component.html
@@ -12,7 +12,7 @@
             <div class="w-full overflow-x-auto">
 
 
-              <div class="border border-red-500 p-2 h-full">
+              <!--div-- class="border border-red-500 p-2 h-full">
                 <div class="flex space-x-2">
                   <input type="text" [(ngModel)]="newTask">
                   <button type="button" class="border p-3" (click)="addTask()"Add Task></button>
@@ -22,7 +22,7 @@
                 </ul>
                 <button class="border -3" (click)="changeFirstTask()">Change firs task</button>
                 <ng-container *ngIf="check()"></ng-container>
-              </div>
+              </!--div-->
 
 
               <table class="w-full whitespace-no-wrap">
@@ -46,6 +46,7 @@
                     </td>
                     <td class="px-4 py-3 text-sm">
                         {{item.last_name}}
+                        <ng-container *ngIf="check()"></ng-container>
                     </td>
                     <td class="px-4 py-3">
                       <div class="flex items-center text-sm">
